fix gap

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1158,7 +1158,7 @@ input:checked + .slider:before {
 }
 
 .content_template-general-item {
-    margin-bottom: 15px;
+    margin-bottom: 35px;
     border-bottom: 1px solid #00000014;
     padding-bottom: 30px;
     list-style: none;
@@ -1444,6 +1444,7 @@ input:checked + .slider:before {
     -webkit-box-pack: justify;
     -ms-flex-pack: justify;
     justify-content: space-between;
+    gap: 40px;
 }
 .last-meu_p {
     font-size: 12px;
@@ -1455,18 +1456,23 @@ input:checked + .slider:before {
 .last-menu {
 }
 .borde-calen {
-    padding: 10px;
+    padding: 4px 5px;
     margin: 0;
+    font-size: 12px;
 }
 .calendario {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    border: 1px solid #4674b8;
-    border-radius: 10px;
-    padding: 0px 10px;
+    border: 1px solid #b5b5b5;
+    border-radius: 5px;
+    padding: 0px 0px;
     position: relative;
-    width: 150px;
+    width: 120px;
+    margin: 0;
+    align-items: center;
+    text-align: center;
+    justify-content: center;
 }
 .user_last {
     display: -webkit-box;
@@ -1474,10 +1480,11 @@ input:checked + .slider:before {
     display: flex;
     font-size: 13px;
     margin: 9px 0;
+    font-size: 11px;
 }
 .user_last svg {
-    width: 17px;
-    margin-right: 5px;
+    width: 14px;
+    margin-right: 3px;
 }
 
 /* tooltip-nav CSS 2.1 */
@@ -2155,4 +2162,8 @@ input:checked + .slider:before {
 .flex-new{
     display: flex;
     align-items: center;
+}
+
+#carouselExampleControls {
+    margin-bottom: 4rem;
 }
